--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "simple-youtube-api": "^5.2.1",
-    "ytdl-core-discord": "^1.2.5"
+    "ytdl-core-discord": "^1.2.5",
+    "ytpl": "^2.0.5"
   },
   "devDependencies": {},
   "scripts": {
