--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elixirmusic",
-  "version": "1.0.0",
+  "version": "1.4.0",
   "description": "",
   "main": "src/bot.js",
   "dependencies": {
@@ -12,6 +12,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "simple-youtube-api": "^5.2.1",
+    "spotify-url-info": "^2.2.0",
     "ytdl-core-discord": "^1.2.5",
     "ytpl": "^2.0.5"
   },
